# casadi

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  .pyspelling.yml  .travis.yml  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  MANIFEST.in  Orchidea  README.md  README.txt  appveyor.yml  casadi-config.cmake.in  casadi.pc.in  changes  conanfile.py  dev_compile.sh  dev_compile_debug.sh  pyproject.toml  run.txt  setup.py
acado_interface/: CMakeLists.txt  acado_function.cpp  acado_function.hpp  acado_integrator.cpp  acado_integrator.hpp  acado_integrator_backend.cpp  acado_integrator_backend.hpp  acado_integrator_internal.cpp  acado_integrator_internal.hpp  acado_interface.cpp  acado_interface.hpp  acado_internal.cpp  acado_internal.hpp
applications/: CMakeLists.txt  alpaqa-driver.cpp
casadi/: .clang-tidy  CMakeLists.txt  README  autogenerated.cpp  autogenerated.hpp  cached_object.cpp  cached_object.hpp  casadi.hpp  casadi_c.h  casadi_calculus.hpp  casadi_common.hpp  casadi_exception.hpp  casadi_limits.hpp  casadi_math.hpp  casadi_operators.hpp  casadi_types.hpp  config.h.cmake  crs_sparsity.cpp  crs_sparsity.hpp  element.hpp  elementary_functions.hpp  expression_tools.cpp  expression_tools.hpp  generate_runtime.cmake  generic_type.cpp  generic_type.hpp  generic_type_internal.cpp  generic_type_internal.hpp  matrix.hpp  matrix_size.hpp  mem.h  option.cpp  option.hpp  options_functionality.cpp  options_functionality.hpp  pre_c99_support.cpp  pre_c99_support.hpp  printable_object.cpp  printable_object.hpp  shared_object.cpp  (+3 more)
control/: CMakeLists.txt  dple_internal.cpp  dple_internal.hpp  dple_solver.cpp  dple_solver.hpp  simple_indef_dple_internal.cpp  simple_indef_dple_internal.hpp  simple_indef_dple_solver.cpp  simple_indef_dple_solver.hpp
convex_programming/: CMakeLists.txt  qcqp_qp_internal.cpp  qcqp_qp_internal.hpp  qcqp_qp_solver.cpp  qcqp_qp_solver.hpp  qp_lp_internal.cpp  qp_lp_internal.hpp  qp_lp_solver.cpp  qp_lp_solver.hpp  qp_stabilized_qp_internal.cpp  qp_stabilized_qp_internal.hpp  qp_stabilized_qp_solver.cpp  qp_stabilized_qp_solver.hpp  qp_stabilizer.cpp  qp_stabilizer.hpp  qp_stabilizer_internal.cpp  qp_stabilizer_internal.hpp  sdp_sdqp_internal.cpp  sdp_sdqp_internal.hpp  sdp_sdqp_solver.cpp  sdp_sdqp_solver.hpp  sdp_socp_internal.cpp  sdp_socp_internal.hpp  sdp_socp_solver.cpp  sdp_socp_solver.hpp  socp_qcqp_internal.cpp  socp_qcqp_internal.hpp  socp_qcqp_solver.cpp  socp_qcqp_solver.hpp
examples/: CMakeLists.txt  biegler_10_1.cpp  biegler_10_1_knitro.cpp  biegler_10_2.cpp  casadi_error_handling.cpp  convection_diffusion.cpp  cstr.cpp  det_minor.cpp  det_minor_mx.cpp  examples.dox  multiple_shooting_from_scratch.cpp  mx_jacobian.cpp  ocp_tools.cpp  rocket_ipopt.cpp  rocket_ipopt_sundials.cpp  rocket_multiple_shooting.cpp  rocket_mx_and_sx.cpp  rocket_sundials.cpp  sundials_testing.cpp  test_csparse_casadi.cpp  test_liftopt.cpp  test_superlu_casadi.cpp  vdp_multiple_shooting.cpp
external_packages/: CMakeLists.txt
integration/: CMakeLists.txt  collocation_integrator.cpp  collocation_integrator.hpp  collocation_integrator_internal.cpp  collocation_integrator_internal.hpp  fixed_step_integrator.cpp  fixed_step_integrator.hpp  fixed_step_integrator_internal.cpp  fixed_step_integrator_internal.hpp  implicit_fixed_step_integrator.hpp  implicit_fixed_step_integrator_internal.cpp  implicit_fixed_step_integrator_internal.hpp  integration_tools.cpp  integration_tools.hpp  irk_integrator.cpp  irk_integrator.hpp  irk_integrator_internal.cpp  irk_integrator_internal.hpp  old_collocation_integrator.cpp  old_collocation_integrator.hpp  old_collocation_integrator_internal.cpp  old_collocation_integrator_internal.hpp  rk_base.cpp  rk_base.hpp  rk_base_internal.cpp  rk_base_internal.hpp  rk_integrator.cpp  rk_integrator.hpp  rk_integrator_internal.cpp  rk_integrator_internal.hpp
interfaces/: CMakeLists.txt
ipopt_interface/: CMakeLists.txt  collocation.cpp  collocation.hpp  compile_mex.m  ipopt_internal.cpp  ipopt_internal.hpp  ipopt_nlp.cpp  ipopt_nlp.hpp  ipopt_solver.cpp  ipopt_solver.hpp  ipopt_solver.m  ipopt_solver_c.cpp  ipopt_solver_c.h  ipopt_solver_mex.cpp
modelica/: CMakeLists.txt  fmi_parser.cpp  fmi_parser.hpp  fmi_parser_internal.cpp  fmi_parser_internal.hpp  ocp_tools.cpp  ocp_tools.hpp  ocp_variables.cpp  ocp_variables.hpp  optimica_ocp.cpp  optimica_ocp.hpp  variable.cpp  variable.hpp  variable_internal.cpp  variable_internal.hpp  variable_tools.cpp  variable_tools.hpp  xml_arg.cpp  xml_arg.hpp  xml_node.cpp  xml_node.hpp  xml_parser.cpp  xml_parser.hpp
nonlinear_programming/: CMakeLists.txt  ip_internal.cpp  ip_internal.hpp  ip_method.cpp  ip_method.hpp  lifted_sqp.cpp  lifted_sqp.hpp  lifted_sqp_internal.cpp  lifted_sqp_internal.hpp  newton_implicit_internal.cpp  newton_implicit_internal.hpp  newton_implicit_solver.cpp  newton_implicit_solver.hpp  nlp_implicit_internal.cpp  nlp_implicit_internal.hpp  nlp_implicit_solver.cpp  nlp_implicit_solver.hpp  nlp_qp_internal.cpp  nlp_qp_internal.hpp  nlp_qp_solver.cpp  nlp_qp_solver.hpp  scaled_nlp_internal.hpp  scaled_nlp_solver.cpp  scaled_qp_internal.hpp  scpgen.cpp  scpgen.hpp  scpgen_internal.cpp  scpgen_internal.hpp  simple_homotopy_nlp_internal.cpp  simple_homotopy_nlp_internal.hpp  simple_homotopy_nlp_solver.cpp  simple_homotopy_nlp_solver.hpp  sqp_internal.cpp  sqp_internal.hpp  sqp_method.cpp  sqp_method.hpp  stabilized_sqp_internal.cpp  stabilized_sqp_internal.hpp  stabilized_sqp_method.cpp  stabilized_sqp_method.hpp  (+2 more)
optimal_control/: CMakeLists.txt  collocation.cpp  collocation.hpp  collocation_internal.cpp  collocation_internal.hpp  direct_collocation.cpp  direct_collocation.hpp  direct_collocation_internal.cpp  direct_collocation_internal.hpp  direct_multiple_shooting.cpp  direct_multiple_shooting.hpp  direct_multiple_shooting_internal.cpp  direct_multiple_shooting_internal.hpp  direct_single_shooting.cpp  direct_single_shooting.hpp  direct_single_shooting_internal.cpp  direct_single_shooting_internal.hpp  flat_ocp.cpp  flat_ocp.hpp  variable.cpp  (+27 more)
(+14237 files in other folders)
